# p.i-segundo-semestre-

./: CMakeLists.txt  Código base puzzle quebra cabeça.txt  Ideias.txt  Integrando todos os códigos.c  Quebra Cabeça.c  README.md  all.c  bobbie_goods.c  fase 2.c  faze 2.c  lobby.c  main.c  menu do jogo.c  menu_do_jogo.c  move.c  movimentacaofinal.c  movimentação básica.txt  puzzle bobbie goods.c  quebra_cabeca.c
teste.dSYM/Contents/Resources/DWARF/: teste
